--- a/index.html
+++ b/index.html
@@ -103,10 +103,44 @@
   <h1>🌌 Fontes do Saber</h1>
   <p class="subtitle">Livros que expandem a consciência e revelam verdades universais.</p>
 
+  <!-- Livro 1 -->
   <div class="book">
+    <a href="https://amzn.to/3KUAk8i" target="_blank">
+      <img src="https://images-na.ssl-images-amazon.com/images/I/81nK1ZQfZ0L._AC_UL600_SR600,600_.jpg" alt="Mensageiros do Amanhecer">
+    </a>
     <h2>Mensageiros do Amanhecer</h2>
     <p>Barbara Marciniak</p>
-    <a href="https://amzn.to/3KUAk8i" target="_blank">🔗 Ver na Amazon</a>
+    <a href="https://amzn.to/3KUAk8i" target="_blank">Ver na Amazon</a>
+  </div>
+
+  <!-- Livro 2 -->
+  <div class="book">
+    <a href="https://amzn.to/4hwemVm" target="_blank">
+      <img src="https://m.media-amazon.com/images/I/51tYZgwCXrL._SY385_.jpg" alt="Os Exilados da Capela">
+    </a>
+    <h2>Os Exilados da Capela</h2>
+    <p>Edgard Armond</p>
+    <a href="https://amzn.to/4hwemVm" target="_blank">Ver na Amazon</a>
+  </div>
+
+  <!-- Livro 3 -->
+  <div class="book">
+    <a href="https://amzn.to/48BW42t" target="_blank">
+      <img src="https://m.media-amazon.com/images/I/41X7oJ+0QBL._SY445_.jpg" alt="Um Novo Mundo">
+    </a>
+    <h2>Um Novo Mundo</h2>
+    <p>Autor do livro</p>
+    <a href="https://amzn.to/48BW42t" target="_blank">Ver na Amazon</a>
+  </div>
+
+  <!-- Livro 4 -->
+  <div class="book">
+    <a href="https://amzn.to/4qnN2fK" target="_blank">
+      <img src="https://m.media-amazon.com/images/I/41Mi7M4K3JL._SY445_.jpg" alt="Ami, o Menino das Estrelas">
+    </a>
+    <h2>Ami, o Menino das Estrelas</h2>
+    <p>Autor do livro</p>
+    <a href="https://amzn.to/4qnN2fK" target="_blank">Ver na Amazon</a>
   </div>
 
   <footer>
